# draft

./: IFs_kdy.csv  IFs_ydb.csv  IMFs_ljs.csv  README.md  best.pth  data.py  draft.py  fusion.py  imf_analyzer.py  imf_eda.ipynb  kdy_test_predictions.csv  ljs_test_predictions.csv  main.py  model.py  test_predictions.csv  timedata_ydb.csv
data/: IFs_ljs.csv  timedata_kdy.csv  timedata_ljs.csv
exp/: README.md  __init__.py  best_IF.pth  config.py  dataset.py  exp.py  main.py  pyproject.toml  trainer.py
exp/mobility_exp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
exp/models/: __init__.py  base_model.py  cnn_lstm.py  if_multimodel.py  informer.py  tft.py  timesnet.py
exp/utils/: __init__.py  loader.py  seed.py
